Cambio que hice en casa

--- a/vistas/layout.html
+++ b/vistas/layout.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="es">
 	<head>
-		<!-- CAMBIO IMPORTANTE -->
+		<!--CAMBIO IMPORTANTE -->
+		<!-- CAMBIO QUE HICE EN CASA -->
 		<meta charset="utf-8"/>
 		<title>Blog</title>
 		<link rel="stylesheet" href="css/normalize.css"/>
